fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/CE_Reimbursement_Expense__c.object-meta.xml
<CustomObject>
    <label>CE Reimbursement/Expense</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Reimbursement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CE Reimbursement/Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>