fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Airline_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Airline_Ticket__c</fullName>
    <label>Airline Ticket ($)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>