fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/C_Booth__c.field-meta.xml
<CustomField>
    <fullName>C_Booth__c</fullName>
    <description>IF(Contains(   CRF_Type__c   ,&quot;Research&quot;), 800.00, 500.00) * T_days__c</description>
    <formula>IF (Contains(  Type_of_Inservice__c ,&quot;Conference/Booth&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,800,1056),0)
* T_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conference Booth New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>