fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Cad_Lab__c.field-meta.xml
<CustomField>
    <fullName>Cad_Lab__c</fullName>
    <description>This field is not in use to calculate the totals - This is for reference only</description>
    <formula>IF ( 
ISPICKVAL(Lab_Role__c,&quot;Clinical Lead&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,980*T_days__c,1284*T_days__c ), 
IF ( 
ISPICKVAL(Lab_Role__c,&quot;Faculty&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,500 * T_days__c,660*T_days__c ), 
IF ( 
ISPICKVAL(Lab_Role__c,&quot;Expert Faculty&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,800 * T_days__c,1048*T_days__c ), 
IF ( 
ISPICKVAL(Lab_Role__c,&quot;Proficient Faculty&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,700 * T_days__c,917*T_days__c ), 
IF(
ISPICKVAL(Lab_Role__c,&quot;Airway&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,500 * T_days__c,660*T_days__c ), 
IF ( 
ISPICKVAL(Lab_Role__c,&quot;CE Prof. Development&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,300 * T_days__c,396 ), 
IF ( 
ISPICKVAL(Lab_Role__c,&quot;CA Prof. Development&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,1500 * T_days__c,1980 )* T_days__c, 
IF( 
ISPICKVAL(Lab_Role__c,&quot;Clinical Advisor&quot;), 
Case(CurrencyIsoCode,&quot;USD&quot;,3000 + 1500 * (T_days__c - 1),3960 + 1980* (T_days__c - 1)), 

0 
))))))))+IF(Cad_t__c,Case(CurrencyIsoCode,&quot;USD&quot;,500,660),0) 
+IF(Pain__c, Case(CurrencyIsoCode,&quot;USD&quot;,200,396),0)
+IF(Oncontrol__c, Case(CurrencyIsoCode,&quot;USD&quot;,200,396),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cadaver Lab New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>