fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Cad_t__c.field-meta.xml
<CustomField>
    <fullName>Cad_t__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cadaveric tissue dissection</label>
    <type>Checkbox</type>
</CustomField>