fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Cadaver_Lab__c.field-meta.xml
<CustomField>
    <fullName>Cadaver_Lab__c</fullName>
    <label>Cadaver Lab ($)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>