fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CE_Contractor_Email__c.field-meta.xml
<CustomField>
    <fullName>CE_Contractor_Email__c</fullName>
    <formula>Clinical_Educator_Name__r.E_mail_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE/Contractor Email</label>
    <type>Text</type>
</CustomField>