fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CE_Contractor_Phone__c.field-meta.xml
<CustomField>
    <fullName>CE_Contractor_Phone__c</fullName>
    <formula>Clinical_Educator_Name__r.Phone_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE/Contractor Phone</label>
    <type>Text</type>
</CustomField>