fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CE_Email__c.field-meta.xml
<CustomField>
    <fullName>CE_Email__c</fullName>
    <label>CE Email</label>
    <type>Email</type>
</CustomField>