fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CE_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>CE_Full_Name__c</fullName>
    <formula>Clinical_Educator_Name__r.FullName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE Full Name</label>
    <type>Text</type>
</CustomField>