fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CE_Recordtype__c.field-meta.xml
<CustomField>
    <fullName>CE_Recordtype__c</fullName>
    <formula>Clinical_Educator_Name__r.RecordType.Name</formula>
    <label>CE Recordtype</label>
    <type>Text</type>
</CustomField>