fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CE_Save_Record__c.field-meta.xml
<CustomField>
    <fullName>CE_Save_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CE Save Record</label>
    <type>Checkbox</type>
</CustomField>