fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CE_Total_Hotel__c.field-meta.xml
<CustomField>
    <fullName>CE_Total_Hotel__c</fullName>
    <formula>T_Hotel__c + CMAH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hotel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>