fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CE_Total_Travel__c.field-meta.xml
<CustomField>
    <fullName>CE_Total_Travel__c</fullName>
    <formula>Total_Travel_Time__c + Total_Mileage__c + Total_Hotel__c + Total_Ground_Trans__c + Total_Airline__c+Total_Hotel_Tips__c
+Total_Transportation_Tips__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>