fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CEM_Name__c.field-meta.xml
<CustomField>
    <fullName>CEM_Name__c</fullName>
    <formula>CEM__r.FirstName &amp; &quot; &quot; &amp; CEM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEM Name</label>
    <type>Text</type>
</CustomField>