fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Check_Travel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Check_Travel_Rate__c</fullName>
    <formula>TravelRate__c &lt;&gt; Education_Contractor__r.Workflow_Travel_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Travel Rate</label>
    <type>Checkbox</type>
</CustomField>