fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Clinical_Educator_Name__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Educator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Educator Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Profile__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Profile__c</referenceTo>
    <relationshipLabel>CE Reimbursement/Expenses</relationshipLabel>
    <relationshipName>CE_Reimbursement_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>