fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CMA_Travel__c.field-meta.xml
<CustomField>
    <fullName>CMA_Travel__c</fullName>
    <label>Travel</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>