fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CMAH__c.field-meta.xml
<CustomField>
    <fullName>CMAH__c</fullName>
    <label>Hotel</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>