fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <formula>IF(ISPICKVAL(CurrencyIsoCode,&quot;CAD&quot;),&quot;CA10 - Canada&quot;,
IF(ISPICKVAL( Education_Record__r.Primary_Product__c ,&quot;Autofuser&quot;),&quot;US10 - Arrow International&quot;,
IF(ISPICKVAL( Education_Record__r.Primary_Product__c ,&quot;EZ-IO&quot;),&quot;US60 - Teleflex LLC&quot;,
&quot;US30 - Arrow International&quot;
)))</formula>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>