fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Conference_Booth__c.field-meta.xml
<CustomField>
    <fullName>Conference_Booth__c</fullName>
    <label>Conference/Booth ($)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>