fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Contact_EMail__c.field-meta.xml
<CustomField>
    <fullName>Contact_EMail__c</fullName>
    <label>Contact EMail</label>
    <type>Email</type>
</CustomField>