fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Cost_Center_for_CRF__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_for_CRF__c</fullName>
    <description>populated via workflow</description>
    <label>Cost Center for CRF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>