fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Business_Reason__c.field-meta.xml
<CustomField>
    <fullName>CRF_Business_Reason__c</fullName>
    <formula>if(ISBLANK( Education_Record__r.Account_Facility__c  ),    Education_Record__r.Name  ,   Education_Record__r.Account_Facility__r.Name   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Reason</label>
    <type>Text</type>
</CustomField>