fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Business_State__c.field-meta.xml
<CustomField>
    <fullName>CRF_Business_State__c</fullName>
    <formula>Clinical_Educator_Name__r.Business_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business State</label>
    <type>Text</type>
</CustomField>