fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_CE_Status__c.field-meta.xml
<CustomField>
    <fullName>CRF_CE_Status__c</fullName>
    <formula>text(Clinical_Educator_Name__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE Status</label>
    <type>Text</type>
</CustomField>