fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CRF_CostCenter__c</fullName>
    <formula>/*CASE( Education_Record__r.Primary_Product__c , 
&quot;LMA MAD Nasal&quot;, &quot;17634&quot;, 
&quot;Pleur-e-vac&quot;, &quot;44054&quot;, 
&quot;ISO-Gard&quot;, &quot;48730&quot;, 
&quot;AutoFuser&quot;, &quot;48039&quot;, 
&quot;FlexBlock&quot;, &quot;48729&quot;, 
&quot;StimuCath&quot;, &quot;48729&quot;, 
&quot;Atomization&quot;, &quot;48727&quot;, 
&quot;Weck® Auto Endo5® Automatic Ligating Clip Applier&quot;, &quot;44057&quot;, 
&quot;Weck® Hem-o-lok® Polymer Locking Ligation System&quot;, &quot;44057&quot;, 
&quot;Weck EFx® Fascial Closure System&quot;,&quot;44057&quot;, 
&quot;MiniLap® Percutaneous Surgical System&quot;,&quot;44057&quot;, 
&quot;Pleur-evac® Chest Drainage System&quot;,&quot;44057&quot;, 
&quot;Implanted Ports&quot;,&quot;17654&quot;, 
&quot;Acute Dialysis Catheters&quot;,&quot;17627&quot;,
&quot;OnControl&quot;,&quot;17627&quot;, 
IF( ISPICKVAL(CurrencyIsoCode,&quot;CAD&quot;), &quot;66209&quot;, 
IF(Clinical_Educator_Name__r.RecordType.Name = &quot;ACE&quot;, &quot;17654&quot;, 
&quot;17647&quot;)))

Update to reflect that records submitted for payment between 12/11/17 and 12/31/17 with 
EZ-IO as primary product are going to the cost center for Vascular Business (17654) instead 
of CMA (17647)*/

IF 
(ISBLANK(Cost_Center_for_CRF__c),   
CASE( Education_Record__r.Primary_Product__c , 
&quot;LMA MAD Nasal&quot;, &quot;17634&quot;, 
&quot;Pleur-e-vac&quot;, &quot;44054&quot;, 
&quot;ISO-Gard&quot;, &quot;48730&quot;, 
&quot;AutoFuser&quot;, &quot;48039&quot;, 
&quot;FlexBlock&quot;, &quot;48729&quot;, 
&quot;StimuCath&quot;, &quot;48729&quot;, 
&quot;Atomization&quot;, &quot;48727&quot;, 
&quot;Weck® Auto Endo5® Automatic Ligating Clip Applier&quot;, &quot;44057&quot;, 
&quot;Weck® Hem-o-lok® Polymer Locking Ligation System&quot;, &quot;44057&quot;, 
&quot;Weck EFx® Fascial Closure System&quot;,&quot;44057&quot;, 
&quot;MiniLap® Percutaneous Surgical System&quot;,&quot;44057&quot;, 
&quot;Pleur-evac® Chest Drainage System&quot;,&quot;44057&quot;, 
&quot;Implanted Ports&quot;,&quot;17654&quot;, 
&quot;Acute Dialysis Catheters&quot;,&quot;17627&quot;,
&quot;OnControl&quot;,&quot;17627&quot;, 
IF( ISPICKVAL(CurrencyIsoCode,&quot;CAD&quot;), &quot;66209&quot;, 
IF(Clinical_Educator_Name__r.RecordType.Name = &quot;ACE&quot;, &quot;17654&quot;, 
IF(AND(ISPICKVAL (Education_Record__r.Primary_Product__c,&quot;EZ-IO&quot;),
          Date_Submitted__c &gt;= DATE(2017,12,11),
          Date_Submitted__c &lt;= DATE(2017,12,31)),&quot;17654&quot;,
&quot;17647&quot;)))),Cost_Center_for_CRF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRF CostCenter</label>
    <type>Text</type>
</CustomField>