fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Covered_Product__c.field-meta.xml
<CustomField>
    <fullName>CRF_Covered_Product__c</fullName>
    <formula>if( INCLUDES(  Education_Record__r.SecondaryProduct__c  , &quot;EZ-IO&quot;) , &quot;ARROW® EZ-IO® Intraosseous Vascular Access System&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;TALON&quot;) , &quot;EZ-IO® T.A.L.O.N.™ Tactically Advanced Lifesaving Intraosseous Needle&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;OnControl&quot;) , &quot;ARROW® OnControl® &quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;LMA Supreme&quot;) , &quot;LMA Supreme® Airway&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Rusch Quicktrach&quot;) , &quot;RUSCH® QUICKTRACH®Emergency Cricothyrotomy Kit&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;LMA MAD Nasal&quot;) , &quot;LMA® MAD Nasal™ Intranasal Mucosal Atomization Device&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;AutoFuser&quot;) , &quot;AUTOFUSER® DISPOSABLE PAIN CONTROL PUMP WITH AUTOSELECTOR® VARIABLE FLOW REGULATOR&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Pleur-e-vac&quot;) , &quot;Pleur-evac®&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Ligation&quot;) , &quot;Weck® Ligation&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Rusch AirTraq&quot;) , &quot;Rusch® Airtraq™&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Percuvance&quot;) , &quot;Percuvance® Percutaneous Surgical System&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Percutaneous&quot;) , &quot;ARROW® PSI(Percutaneous Sheath Introducers)&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;CVC&quot;) , &quot;ARROW® CVCs with ARROWg+ard® Technology&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;MAC&quot;) , &quot;ARROW® MAC with ARROWg+ard® Blue Technology&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Acute HD&quot;) , &quot; ARROWg+ard Blue® Catheter Two-Lumen Hemodialysis Catheterization Kit with Blue FlexTip®&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;JACC&quot;) , &quot;ARROW® JACC&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;VPS&quot;) , &quot;VPS Vascular Positioning System&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;PICC&quot;) , &quot;Arrowg+ard Blue Advance™ PICC Technology&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Arterials&quot;) , &quot;ARROW® Arterial Products&quot;&amp; BR(),&quot; &quot;)&amp;

if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;ISO-Gard&quot;) , &quot;ISO-Gard® Mask with ClearAir™ Technology&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;FlexTip&quot;) , &quot;FlexTip Plus® Epidural Catheter &quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;FlexBlock&quot;) , &quot;FlexBlock™ Continuous Peripheral Nerve Block Product&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;StimuCath&quot;) , &quot;StimuCath® Continuous Plexus and Nerve Block Product&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;StimuQuik&quot;) , &quot;StimuQuik® Peripheral Nerve Block Needle&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;UltraQuik&quot;) , &quot;UltraQuik® Peripheral Nerve Block Needle&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;StimuQuik ECHO&quot;) , &quot;StimuQuik ECHO® Peripheral Nerve Block Needle&quot;&amp; BR(),&quot; &quot;)&amp;
if( INCLUDES(Education_Record__r.SecondaryProduct__c, &quot;Laryngoscopy&quot;) , &quot;Laryngoscopy&quot;,&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Covered Product</label>
    <type>Text</type>
</CustomField>