fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Doctors_Specialty__c.field-meta.xml
<CustomField>
    <fullName>CRF_Doctors_Specialty__c</fullName>
    <formula>Clinical_Educator_Name__r.Practice_Specialty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctors Specialty</label>
    <type>Text</type>
</CustomField>