fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_IS_Date__c.field-meta.xml
<CustomField>
    <fullName>CRF_IS_Date__c</fullName>
    <description>Inservice Date range of beginning and end date</description>
    <formula>if(ISBLANK( Education_Record__r.Ending_Date__c ), TEXT(MONTH((Education_Record__r.Date_of_Event_Start__c) ))&amp;&quot;/&quot; &amp;TEXT(DAY((Education_Record__r.Date_of_Event_Start__c) ))&amp;&quot;/&quot; &amp;TEXT(YEAR(( (Education_Record__r.Date_of_Event_Start__c) ))),


TEXT(MONTH((Education_Record__r.Date_of_Event_Start__c) ))&amp;&quot;/&quot; &amp;TEXT(DAY((Education_Record__r.Date_of_Event_Start__c) ))&amp;&quot;/&quot; &amp;TEXT(YEAR((Education_Record__r.Date_of_Event_Start__c) ))&amp;&quot; - &quot;&amp;

TEXT(MONTH((Education_Record__r.Ending_Date__c)))&amp;&quot;/&quot; &amp;TEXT(DAY((Education_Record__r.Ending_Date__c)))&amp;&quot;/&quot; &amp;TEXT(YEAR((Education_Record__r.Ending_Date__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that will display</inlineHelpText>
    <label>IS Date</label>
    <type>Text</type>
</CustomField>