fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Nature_of_Pmt_12__c.field-meta.xml
<CustomField>
    <fullName>CRF_Nature_of_Pmt_12__c</fullName>
    <formula>Total_In_Service_Hours__c + Total_Cadaver_Lab__c + Total_Speaking__c +  Total_Time_Worked__c +   TotalPresentation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRF Nature of Pmt 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>