fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Nature_of_Pmt_6__c.field-meta.xml
<CustomField>
    <fullName>CRF_Nature_of_Pmt_6__c</fullName>
    <formula>Total_Meals__c+Total_Meal_Tips__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRF Nature of Pmt 6</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>