fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_NPI__c.field-meta.xml
<CustomField>
    <fullName>CRF_NPI__c</fullName>
    <formula>Clinical_Educator_Name__r.NPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPI</label>
    <type>Text</type>
</CustomField>