fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Physician_Primary_Type__c.field-meta.xml
<CustomField>
    <fullName>CRF_Physician_Primary_Type__c</fullName>
    <formula>text(Clinical_Educator_Name__r.Physician_Primary_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Primary Type</label>
    <type>Text</type>
</CustomField>