fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_RCEM__c.field-meta.xml
<CustomField>
    <fullName>CRF_RCEM__c</fullName>
    <label>CRF RCEM</label>
    <type>Email</type>
</CustomField>