fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>CRF_Recipient_Type__c</fullName>
    <formula>if( ISBLANK(CRF_Physician_Primary_Type__c ),&quot;Other Healthcare Professional&quot;,&quot;Physician&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Type</label>
    <type>Text</type>
</CustomField>