fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_State_Lic__c.field-meta.xml
<CustomField>
    <fullName>CRF_State_Lic__c</fullName>
    <formula>Clinical_Educator_Name__r.Medical_License__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Lic #</label>
    <type>Text</type>
</CustomField>