fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_State_of_License__c.field-meta.xml
<CustomField>
    <fullName>CRF_State_of_License__c</fullName>
    <formula>Clinical_Educator_Name__r.State_of_License__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State of License</label>
    <type>Text</type>
</CustomField>