fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Subject__c.field-meta.xml
<CustomField>
    <fullName>CRF_Subject__c</fullName>
    <formula>&quot;*SFDC* CRF - &quot;&amp;CE_Full_Name__c&amp;&quot; - &quot;&amp;CRF_IS_Date__c&amp;&quot; - &quot;&amp;CRF_Business_Reason__c&amp;&quot; - &quot; &amp;TEXT(Grand_Total_Reimbursement__c)  &amp;&quot; - &quot;&amp; TEXT(Clinical_Educator_Name__r.Mailing_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRF Subject</label>
    <type>Text</type>
</CustomField>