fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>CRF_Submitted_by__c</fullName>
    <label>CRF Submitted by</label>
    <length>25</length>
    <type>Text</type>
</CustomField>