fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_TaxID__c.field-meta.xml
<CustomField>
    <fullName>CRF_TaxID__c</fullName>
    <formula>Clinical_Educator_Name__r.Tax_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TaxID</label>
    <type>Text</type>
</CustomField>