fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/CRF_Theraputic_Area__c.field-meta.xml
<CustomField>
    <fullName>CRF_Theraputic_Area__c</fullName>
    <formula>CASE(  Education_Record__r.Business_Unit__c   , 
&quot;VA&quot;, &quot;Vascular Access&quot;,
&quot;IA&quot;,&quot;Interventional Access&quot;,
&quot;EMS&quot;,&quot;Anesthesia&quot;,
&quot;Surgical&quot;,&quot;Surgical&quot;,
&quot;Anesthesia&quot;,&quot;Anesthesia&quot;,
&quot;Respiratory&quot;,&quot;Respiratory&quot;,
&quot;n/a&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Theraputic Area</label>
    <type>Text</type>
</CustomField>